use List.of instead Collections, and formta code