@@ -19,7 +19,6 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 
 @Slf4j
@@ -50,7 +49,7 @@ public class RedisRateLimitFilter extends OncePerRequestFilter {
     String key = "rate-limit:" + ip;
 
     try {
-      Long count = redisTemplate.execute(rateLimitScript, Collections.singletonList(key), 60);
+      Long count = redisTemplate.execute(rateLimitScript, List.of(key), 60);
       if (count > 3) {
         log.warn("too many request for {}", ip);
         sendErrorResponse(response, 429, "too many requests");
